# Kavach-AI

./: MASTER PROMPT.txt  PRD.md  README.md  pubspec.yaml
.github/workflows/: windows_release.yml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/features/dashboard/presentation/: dashboard_screen.dart
lib/src/features/document_processing/presentation/: review_screen.dart
lib/src/repositories/: document_collection.dart  document_repository.dart  local_database_repository.dart  mock_data_repository.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/src/state/: demo_mode_provider.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/: run_build_tool.cmd
rust_builder/ios/: rust_lib_aegis_vault.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_aegis_vault.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
