[package]
name = "rust_lib_aegis_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
ed25519-dalek = "2.1.1"
lopdf = "0.34.0"
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
